* Modified the README Signed-off-by: Nick Devito <nick@nick125.com>

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Visit http://arduino.bitmeadow.org for more info!
+Visit http://arduino.bitmeadow.org for more information. 
+
+-- Contributors --
+
