--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Visit http://arduino.bitmeadow.org for more information. 
 
 -- Contributors --
-
-A test!
+* nick125 (Nick Devito / nick@nick125.com)
+* RobotGuy (Dale Weber / arduino@hybotics.org)
+* Ian_Daniher (Ian Daniher / it.daniher@gmail.com)
+..and thank you to everyone whom I haven't listed. We thank you for your 
+effort in making this project what it is today. 
