--- a/README
+++ b/README
@@ -1,8 +1,10 @@
-Visit http://arduino.bitmeadow.org for more information. 
+Visit out Wiki at http://arduino.bitmeadow.org for more information. You
+can also find us on IRC at irc.freenode.net, channel #ArduinoIDE.
 
 -- Contributors --
 * nick125 (Nick Devito / nick@nick125.com)
 * RobotGuy (Dale Weber / arduino@hybotics.org)
 * Ian_Daniher (Ian Daniher / it.daniher@gmail.com)
+
 ..and thank you to everyone whom I haven't listed. We thank you for your 
 effort in making this project what it is today. 
