* Added FlaPer87 to the README contributors section

--- a/docs/README
+++ b/docs/README
@@ -6,6 +6,6 @@ is welcome!
 * nick125 (Nick Devito <nick@nick125.com>
 * RobotGuy (Dale Weber <arduino@hybotics.org>
 * Ian_Daniher (Ian Daniher <it.daniher@gmail.com>
-
+* FlaPer87 (Flavio Percoco Premoli <flaper87 AT flaper87 DOT org>)
 ..and thank you to everyone whom I haven't listed. We thank you for your 
 effort in making this project what it is today. 
